--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{"homepage":"https://pawan-r4ju.github.io/Pokedex_Reactjs",
+{
+  "homepage": "https://pawan-r4ju.github.io/Pokedex_Reactjs",
   "name": "pokemon",
   "private": true,
   "version": "0.0.0",
@@ -8,8 +9,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build", 
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -25,6 +26,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
